--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ footer_text: >
   Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: Explainable AI, Shapley Values, Shapley Interactions, Fabian, Fumagalli, Bielefeld University # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 🦦 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 🐼 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://FFmgll.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
