--- a/_config.yml
+++ b/_config.yml
@@ -170,12 +170,10 @@ disqus_shortname: al-folio # put your disqus shortname
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
 external_sources:
-  - name: medium.com
-    rss_url: https://medium.com/@al-folio/feed
-  - name: Google Blog
+  - name: Mindful Modeler
     posts:
-      - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
-        published_date: 2024-05-14
+      - url: https://mindfulmodeler.substack.com/p/9f4f9f0c-58ad-4c6c-b82e-5547388f2127?postPreview=paid&updated=2024-12-02T07%3A37%3A23.373Z&audience=everyone&free_preview=false&freemail=true
+        published_date: 2024-12-03
 
 # -----------------------------------------------------------------------------
 # Newsletter
