--- a/_config.yml
+++ b/_config.yml
@@ -173,7 +173,7 @@ external_sources:
   - name: Mindful Modeler
     posts:
       - url: https://open.substack.com/pub/mindfulmodeler/p/what-are-shapley-interactions-and?utm_campaign=post&utm_medium=web
-      - published_date: 2024-12-03
+        published_date: 2024-12-03
 
 # -----------------------------------------------------------------------------
 # Newsletter
