--- a/_config.yml
+++ b/_config.yml
@@ -174,6 +174,8 @@ external_sources:
     posts:
       - url: https://open.substack.com/pub/mindfulmodeler/p/what-are-shapley-interactions-and
         published_date: 2024-12-03
+        title: "An Introduction to Shapley Interactions"
+        
 
 # -----------------------------------------------------------------------------
 # Newsletter
@@ -192,7 +194,7 @@ collections:
   news:
     defaults:
       layout: post
-    output: true
+    output: false
     permalink: /:collection/:title/
   projects:
     output: false
