--- a/_config.yml
+++ b/_config.yml
@@ -171,11 +171,13 @@ disqus_shortname: al-folio # put your disqus shortname
 # you can display them in your blog by adding a link to the RSS feed.
 external_sources:
   - name: Mindful Modeler
+    title: "What are Shaply Interactions?"
     posts:
       - url: https://open.substack.com/pub/mindfulmodeler/p/what-are-shapley-interactions-and
         published_date: 2024-12-03
-        title: "An Introduction to Shapley Interactions"
-        
+        title: "What are Shaply Interactions?"
+
+
 
 # -----------------------------------------------------------------------------
 # Newsletter
