--- a/_config.yml
+++ b/_config.yml
@@ -174,6 +174,8 @@ external_sources:
     posts:
       - url: https://open.substack.com/pub/mindfulmodeler/p/what-are-shapley-interactions-and
         title: What are Shapley Interactions?
+        published_date: 2024-12-03
+
 
 
 
