--- a/_config.yml
+++ b/_config.yml
@@ -252,7 +252,7 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
-  - _pages/cv.md
+  #- _pages/cv.md
 keep_files:
   - CNAME
   - .nojekyll
