--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,25 +2,19 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Fabian Fumagalli
     - name: Date of Birth
-      value: 14th March 1879
+      value: 27th September 1993
     - name: Languages
-      value: English, German
-
+      value: German, English
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Mathematics Msc.
+      institution: Technical University of Berlin, Berlin, Germany
+      year: 2018
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
+        - Stochastics and Financial Mathematics
     - title: Federal teaching diploma
       institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
       year: 1900
