--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -16,7 +16,7 @@
       description:
         - Stochastics and Financial Mathematics
     - title: Mathematics BSc.
-      institution: Free University Berlin, Berlin, Germany
+      institution: Free University of Berlin, Berlin, Germany
       year: 2015
       description:
 
