--- a/_config.yml
+++ b/_config.yml
@@ -173,7 +173,7 @@ external_sources:
   - name: Mindful Modeler
     posts:
       - url: https://open.substack.com/pub/mindfulmodeler/p/what-are-shapley-interactions-and
-        title: What are Shapley Interactions?
+        title: What Are Shapley Interactions, and Why Should You Care?
         published_date: 2024-12-03
 
 
