--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -24,59 +24,56 @@
   type: time_table
   contents:
     - title: SAS and Data Science Consultant
-      institution: Collaborations Betters the World (CBTW, former PTC, mayato)
+      institution: CBTW (former PTC, mayato)
       year: 2018 - 2021
       description:
         - International clients mostly in banking and insurance
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+    - title: Working Student
+      institution: mayato
+      year: 2017 - 2018
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+    - title: Data Scientist
+      institution: Munich Re, Germany
+      year: 2017
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Teaching Assistant
+      institution: Free University of Berlin
+      year: 2014 - 2016
       description:
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: R & Web Developer
+      institution: ISQ Berlin und Brandenburg e.V.
+      year: 2014
 
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="https://github.com/mmschlk/shapiq">shapiq</a>
+      year: 2023-now
+      description: An extension of the SHAP package, provides Shapley interactions for machine learning research.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2023
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
+        - Best Paper Award at xAI 2023
+    - year: 2024
       items:
-        - Max Planck Medal
+        - Distinguished Reviewer at ICML 2024
+        - Distinguished Reviewer at NeurIPS 2024
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Explainable AI
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Feature Attributions
+        - Feature Interactions
+    - title: Applications of Game Theory in Machine Learning
       items:
-        - Description 1.
-        - Description 2.
+        - Shapley value and interactions
+        - Optimal set finding
 
 - title: Other Interests
   type: list
