--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Fabian
 middle_name:
 last_name: Fumagalli
-email: fLASTNAME AT techfak.uni-bielefeld.de
+email: ffumagalli@techfak.uni-bielefeld.de
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Personal Website
 footer_text: >
@@ -81,7 +81,7 @@ flickr_id: # your flickr id
 github_username: FFmgll # your GitHub user name
 gitlab_username: # your GitLab user name
 ieee_id: # your ieeexplore.ieee.org/author/id
-inspirehep_id: 1010907 # Inspire HEP author ID
+inspirehep_id: # Inspire HEP author ID
 instagram_id: # your instagram id
 kaggle_id: # your kaggle id
 keybase_username: # your keybase user name
@@ -135,7 +135,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: Research Blog # blog_name will be displayed in your blog page
-blog_description: high-level introductions to my research
+blog_description: high-level introduction to my research
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
