--- a/_config.yml
+++ b/_config.yml
@@ -219,7 +219,7 @@ latest_posts:
 
 # Markdown and syntax highlight
 markdown: kramdown
-highlighter: rouge
+highlighter: #e2f5ec
 kramdown:
   input: GFM
   syntax_highlighter_opts:
