--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ last_name: Fumagalli
 email: ffumagalli@techfak.uni-bielefeld.de
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Personal Website
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
+footer_text: #>
+  #Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+  #Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+  #Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: Explainable AI, Shapley Values, Shapley Interactions, Fabian, Fumagalli, Bielefeld University # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🐼 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
