--- a/_config.yml
+++ b/_config.yml
@@ -134,8 +134,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Research Blog # blog_name will be displayed in your blog page
-blog_description: high-level introduction to my research
+blog_name: Blog # blog_name will be displayed in your blog page
+blog_description: Here I occasionally post about my research
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
