--- a/_config.yml
+++ b/_config.yml
@@ -175,9 +175,13 @@ external_sources:
       - url: https://open.substack.com/pub/mindfulmodeler/p/what-are-shapley-interactions-and
         title: What Are Shapley Interactions, and Why Should You Care?
         published_date: 2024-12-03
+  - name: News TRR318 "Constructing Explainability"
+    posts:
       - url: https://trr318.uni-paderborn.de/en/news-item/new-paths-in-explainable-ai-with-shapley-interactions
         title: New Paths in Explainable AI with Shapley Interactions
         published_date: 2024-12-06
+  - name: News TRR318 "Constructing Explainability"
+    posts:
       - url: https://trr318.uni-paderborn.de/en/news-item/best-paper-award-fuer-trr-forschende-auf-der-xai-2023
         title: Best Paper Award for TRR Researchers at xAI 2023
         published_date: 2023-09-18
