--- a/_config.yml
+++ b/_config.yml
@@ -134,7 +134,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: research blog # blog_name will be displayed in your blog page
+blog_name: blog # blog_name will be displayed in your blog page
 blog_description: here I occasionally post about my research
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
