--- a/_config.yml
+++ b/_config.yml
@@ -135,7 +135,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: blog # blog_name will be displayed in your blog page
-blog_description: here I occasionally post about my research
+blog_description: here I collect posts and news about my research
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
