--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ footer_text: #>
   #Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   #Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
   #Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: Explainable AI, Shapley Values, Shapley Interactions, Fabian, Fumagalli, Bielefeld University # add your own keywords or leave empty
+keywords: Explainable AI, Shapley Values, Shapley Interactions, Fabian, Fumagalli # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 🐼 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 🦦 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://FFmgll.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
